fix(intouch): correct alignment of Project Upload titles

--- a/applications/intouch/frontend/components/Tabs/Uploads/styles.module.scss
+++ b/applications/intouch/frontend/components/Tabs/Uploads/styles.module.scss
@@ -15,6 +15,10 @@
         justify-content: space-between;
         padding-left: 0.6rem;
         padding-right: 0.6rem;
+        .MuiTypography-root {
+          display: flex;
+          align-items: center;
+        }
       }
     }
   }
